--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,12 +8,15 @@ spring:
       ddl-auto: create-drop
     properties:
       hibernate:
+        jdbc:
+          time_zone: Asia/Jakarta
         format_sql: true
         dialect: org.hibernate.dialect.MySQLDialect
     show-sql: false
   jackson:
     serialization:
       write-dates-as-timestamps: false
+    time-zone: Asia/Jakarta
 
 server:
   port: 8080
